@@ -550,6 +550,7 @@ void print_status_info( pslr_handle_t h, pslr_status status ) {
     printf("flash exposure compensation: %.2f\n", (1.0 * status.flash_exposure_compensation/256));
     printf("manual mode ev: %.2f\n", (1.0 * status.manual_mode_ev / 10));
     printf("lens: %s\n", get_lens_name(status.lens_id1, status.lens_id2));
+    printf("battery: %.2fV %.2fV %.2fV %.2fV\n", 0.01 * status.battery_1, 0.01 * status.battery_2, 0.01 * status.battery_3, 0.01 * status.battery_4);
 }
 
 void usage(char *name) {
