@@ -4,6 +4,7 @@ version 0.76.01
 	Limited support added: K-m, K2000
 	Reading/writing AE metering mode field (K-x, K-7, K-5, K-r)
 	Updating lens info database ( exiftool 8.60 )
+	Reading battery fields
 
 version 0.76.00 ( 2011-07-06 )
 	Support for K-r added by Vincenc Podobnik <vincenc.podobnik@gmail.com>
